# cldfbench

./: .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASING.md  setup.cfg  setup.py
.github/workflows/: python-package.yml
doc/: catalogs.rst  cldf.rst  commands.rst  conf.py  dataset.rst  index.rst  tutorial.md
scripts/: makerelease.py
src/cldfbench/: __init__.py  __main__.py  _compat.py  catalogs.py  ci.py  cldf.py  cli_util.py  datadir.py  dataset.py  metadata.py  repository.py  scaffold.py  util.py
src/cldfbench/commands/: README.md  __init__.py  catconfig.py  catinfo.py  catupdate.py  check.py  ci.py  cldfreadme.py  config.py  diff.py  download.py  geojson.py  info.py  ls.py  makecldf.py  media.py  new.py  readme.py  run.py  stub.py  zenodo.py
src/cldfbench/dataset_template/: +prefix+_+id+.py_tmpl  .travis.yml  cldfbench_+id+.py_tmpl  setup.py_tmpl  test.py
src/cldfbench/dataset_template/.github/workflows/: cldf-validation.yml  python-package.yml
tests/: conftest.py  test_catalogs.py  test_cldf.py  test_cli.py  test_datadir.py  test_dataset.py  test_metadata.py  test_repository.py  test_scaffold.py  test_util.py
tests/fixtures/: CONTRIBUTORS.md  metadata.json  module.py  module_media.py  module_media_local.py  test.ods  test.xls  test.xlsx  test.xml
tests/glottolog/languoids/tree/abcd1234/: md.ini
