[metadata]
name = cldfbench
version = 1.9.1.dev0
license = Apache 2.0
license_file = LICENSE
author = Robert Forkel
author_email = dlce.rdm@eva.mpg.de
description = Python library implementing a CLDF workbench
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cldf/cldfbench
project_urls =
    Bug Tracker = https://github.com/cldf/cldfbench/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: Apache Software License

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.6
install_requires =
    # version 2.0.0 of rfc3986 dropped python 3.6 support.
    rfc3986<2
    csvw>=1.5.6
    clldutils>=3.10.0
    cldfcatalog>=1.3
    pycldf>=1.19.0
    termcolor
    requests
    appdirs
    pytest
    zenodoclient>=0.3
    tqdm

include_package_data = True

[options.package_data]
cldfbench = *

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    cldfbench = cldfbench.__main__:main

[options.extras_require]
dev =
    flake8
    wheel
    build
    twine
test =
    pytest >= 5
    pytest-mock
    pytest-cov
    tox
    pyglottolog>=3.2.2
    pyconcepticon
    odfpy
    openpyxl
    xlrd>=2
docs =
    sphinx
    sphinx-autodoc-typehints
    sphinx-rtd-theme
odf =
    odfpy
excel =
    openpyxl
    xlrd>=2
glottolog =
    # Access the Glottolog catalog.
    pyglottolog
concepticon =
    # Access the Concepticon catalog.
    pyconcepticon
clts =
    # Access the CLTS catalog.
    pyclts

[flake8]
ignore = E711,E712,D100,D101,D103,D102,D301,W503
max-line-length = 100
exclude = .tox

[tool:pytest]
minversion = 5
testpaths = tests
addopts = --cov

[easy_install]
zip_ok = false

[coverage:run]
source =
    cldfbench
    tests

[coverage:report]
show_missing = true
skip_covered = true

[tox:tox]
envlist = py36, py37, py38, py39, py310
isolated_build = true
skip_missing_interpreter = true

[testenv]
deps = .[test]
commands = pytest {posargs}
